# Terminux

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/: RELEASE_TEMPLATE.md
.github/workflows/: release.yml
assets/: open-terminux-here  wezterm-nautilus.py  wezterm.appdata.xml  wezterm.desktop
assets/flatpak/: org.terminux.terminux.json  org.terminux.terminux.template.json
assets/shell-completion/: bash  fish  zsh
assets/shell-integration/: terminux.sh
bidi/: Cargo.toml
bidi/examples/: shaping.rs
bidi/src/: lib.rs
bidi/tests/: conformance.rs
ci/: windows-installer.iss
codec/: Cargo.toml
codec/src/: lib.rs
color-types/: Cargo.toml
color-types/src/: lib.rs
config/: Cargo.toml
config/derive/: Cargo.toml
config/src/: background.rs  bell.rs  cell.rs  color.rs  config.rs  daemon.rs  exec_domain.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  scheme_data.rs  serial.rs  ssh.rs  terminal.rs  tls.rs  units.rs  unix.rs  version.rs  window.rs  wsl.rs
env-bootstrap/: Cargo.toml
env-bootstrap/src/: lib.rs  ringlog.rs
lua-api-crates/battery/: Cargo.toml
lua-api-crates/battery/src/: lib.rs
lua-api-crates/color-funcs/: Cargo.toml
lua-api-crates/color-funcs/src/: image_colors.rs  lib.rs
lua-api-crates/filesystem/src/: lib.rs
lua-api-crates/logging/src/: lib.rs
lua-api-crates/mux/: Cargo.toml
lua-api-crates/mux/src/: lib.rs  pane.rs  window.rs
lua-api-crates/plugin/: Cargo.toml
lua-api-crates/plugin/src/: lib.rs
lua-api-crates/procinfo-funcs/: Cargo.toml
lua-api-crates/serde-funcs/: Cargo.toml
lua-api-crates/serde-funcs/src/: lib.rs
lua-api-crates/share-data/: Cargo.toml
lua-api-crates/share-data/src/: lib.rs
lua-api-crates/spawn-funcs/: Cargo.toml
lua-api-crates/spawn-funcs/src/: lib.rs
lua-api-crates/ssh-funcs/: Cargo.toml
lua-api-crates/ssh-funcs/src/: lib.rs
lua-api-crates/termwiz-funcs/: Cargo.toml
lua-api-crates/termwiz-funcs/src/: lib.rs
lua-api-crates/time-funcs/: Cargo.toml
lua-api-crates/time-funcs/src/: lib.rs
lua-api-crates/url-funcs/: Cargo.toml
lua-api-crates/window-funcs/: Cargo.toml
lua-api-crates/window-funcs/src/: lib.rs
luahelper/: Cargo.toml
luahelper/src/: enumctor.rs  lib.rs
mux/: Cargo.toml
mux/src/: connui.rs  domain.rs  lib.rs  localpane.rs  pane.rs  renderable.rs  ssh.rs  tab.rs  termwiztermtab.rs  tmux.rs  tmux_commands.rs
packaging/appimage/: build-appimage.sh
packaging/debian/: build-deb.sh
packaging/debian/DEBIAN/: control  postinst  prerm
procinfo/: Cargo.toml
procinfo/src/: lib.rs
scripts/: install.sh  uninstall.sh
strip-ansi-escapes/src/: main.rs
sync-color-schemes/: Cargo.toml
sync-color-schemes/src/: main.rs
term/: Cargo.toml
term/src/: color.rs  config.rs  input.rs  lib.rs  screen.rs  terminal.rs
term/src/terminalstate/: image.rs  iterm.rs  kitty.rs  mod.rs  performer.rs  sixel.rs
term/src/test/: image.rs  mod.rs
terminux/: Cargo.toml  TERMS_OF_FORK.md
terminux-blob-leases/: Cargo.toml
terminux-cell/: Cargo.toml
terminux-cell/src/: color.rs  image.rs  lib.rs
terminux-char-props/: Cargo.toml
terminux-char-props/codegen/: Cargo.toml
terminux-client/: Cargo.toml
terminux-client/src/: client.rs  discovery.rs  domain.rs
terminux-client/src/pane/: clientpane.rs  mousestate.rs  renderable.rs
terminux-dynamic/: Cargo.toml
terminux-dynamic/derive/: Cargo.toml
terminux-dynamic/derive/src/: attr.rs  fromdynamic.rs  todynamic.rs
terminux-dynamic/src/: lib.rs
terminux-dynamic/tests/: fromdynamic.rs  todynamic.rs
terminux-escape-parser/: Cargo.toml
terminux-escape-parser/src/: color.rs  csi.rs  error.rs  hyperlink.rs  lib.rs
terminux-font/: Cargo.toml
terminux-font/src/: hbwrap.rs  lib.rs  units.rs
terminux-font/src/rasterizer/: colr.rs  freetype.rs
terminux-font/src/shaper/: harfbuzz.rs  mod.rs
terminux-gui/: Cargo.toml  build.rs
terminux-gui-subcommands/: Cargo.toml
terminux-gui/src/: commands.rs  customglyph.rs  download.rs  frontend.rs  glyphcache.rs  inputmap.rs  main.rs  renderstate.rs  scrollbar.rs  selection.rs  shapecache.rs  spawn.rs  tabbar.rs  update.rs  utilsprites.rs
terminux-gui/src/overlay/: confirm_close_pane.rs  copy.rs  debug.rs  mod.rs  quickselect.rs
terminux-gui/src/scripting/: guiwin.rs  mod.rs
terminux-gui/src/termwindow/: background.rs  box_model.rs  charselect.rs  mod.rs  modal.rs  mouseevent.rs  palette.rs  paneselect.rs  resize.rs  selection.rs
terminux-input-types/: Cargo.toml
terminux-input-types/src/: lib.rs
terminux-mux-server/: Cargo.toml
terminux-mux-server-impl/: Cargo.toml
terminux-mux-server-impl/src/: dispatch.rs  lib.rs  local.rs  sessionhandler.rs
terminux-mux-server/src/: main.rs  ossl.rs
terminux-open-url/: Cargo.toml
terminux-ssh/: Cargo.toml
terminux-ssh/examples/: ssh.rs
terminux-ssh/src/: config.rs  sessioninner.rs
terminux-ssh/tests/: sshd.rs
terminux-surface/: Cargo.toml
terminux-surface/src/: cellcluster.rs  change.rs  hyperlink.rs  lib.rs
terminux-surface/src/line/: cellref.rs  clusterline.rs  line.rs  test.rs  vecstorage.rs
terminux-toast-notification/: Cargo.toml
terminux-toast-notification/src/: dbus.rs  macos.rs  windows.rs
terminux-uds/: Cargo.toml
terminux-version/: Cargo.toml  build.rs
terminux-version/src/: lib.rs
terminux/core/: dashboard.lua  dashboard_config.lua  plugin_manager.lua  session.lua  settings.lua  ssh_profiles.lua  terminux.lua  theme.lua  workspaces.lua
terminux/docs/: build-from-source.md  command-palette.md  dashboard.md  installation.md  plugin-examples.md  plugins.md  recovery.md  release-checklist.md  releasing.md  sessions.md  themes.md
terminux/scripts/: dashboard.sh  setup-wizard.sh
terminux/src/: asciicast.rs  main.rs
terminux/themes/: midnight.lua  neon.lua  terminux-dark.lua  terminux-light.lua
termwiz/: Cargo.toml
termwiz/data/: wezterm.terminfo
termwiz/src/: error.rs  input.rs  lib.rs
termwiz/src/caps/: mod.rs  probed.rs
window/: Cargo.toml
window/examples/: async.rs
window/src/: lib.rs
(+60 files in other folders)
