[package]
authors = ["Wez Furlong"]
name = "terminux-cell"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wezterm/wezterm"
description = "Model a Cell in a Terminal display"
license = "MIT"
documentation = "https://docs.rs/terminux-cell"
keywords = ["terminal", "cell"]

[dependencies]
finl_unicode.workspace = true
image = {workspace=true, optional=true}
log = {workspace = true, optional=true}
ordered-float = {workspace = true, optional=true}
sha2 = {workspace=true, optional=true}
serde = {workspace=true, optional=true}
thiserror = {workspace=true, optional=true}
terminux-blob-leases = {workspace = true, optional=true}
terminux-char-props.workspace = true
terminux-color-types.workspace = true
terminux-escape-parser.workspace = true
terminux-dynamic.workspace = true

[features]
std = ["serde/std", "terminux-char-props/std", "terminux-color-types/std", "terminux-escape-parser/std", "terminux-dynamic/std", "finl_unicode/std"]
use_serde = ["dep:serde", "terminux-color-types/use_serde"]
use_image = ["dep:image", "dep:terminux-blob-leases", "dep:log", "dep:ordered-float", "dep:sha2", "dep:thiserror"]

[dev-dependencies]

