[package]
authors = ["Wez Furlong"]
name = "termwiz"
version = "0.24.0"
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Terminal Wizardry for Unix and Windows"
license = "MIT"
documentation = "https://docs.rs/termwiz"
keywords = ["terminal", "readline", "console", "curses"]
readme = "README.md"

[dependencies]
anyhow.workspace = true
bitflags = "2.0"
cassowary = {workspace=true, optional=true}
fancy-regex.workspace = true
filedescriptor.workspace = true
finl_unicode.workspace = true
fixedbitset.workspace = true
fnv = {workspace=true, optional=true}
image = {workspace=true, optional=true}
libc.workspace = true
log.workspace = true
memmem.workspace = true
num-derive.workspace = true
num-traits.workspace = true
ordered-float = {workspace = true, features=["std"]}
pest = {workspace=true, optional=true}
pest_derive = {workspace=true, optional=true}
phf.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
sha2 = {workspace=true, optional=true}
siphasher.workspace = true
terminfo.workspace = true
thiserror.workspace = true
ucd-trie.workspace = true
unicode-segmentation.workspace = true
vtparse.workspace = true
terminux-bidi.workspace = true
terminux-blob-leases = {workspace=true, optional=true}
terminux-cell = {workspace = true, features=["std"]}
terminux-char-props.workspace = true
terminux-color-types = {workspace = true, features=["std"]}
terminux-dynamic = {workspace = true, features=["std"]}
terminux-escape-parser = {workspace = true, features=["std"]}
terminux-input-types.workspace = true
terminux-surface = {workspace = true, features=["std", "appdata"]}

[features]
default = ["image", "tmux_cc"]
widgets = ["cassowary", "fnv"]
use_serde = ["serde", "terminux-color-types/use_serde", "terminux-blob-leases/serde", "bitflags/serde", "terminux-input-types/serde", "terminux-escape-parser/use_serde", "terminux-cell/use_serde", "terminux-surface/use_serde"]
use_image = ["image", "dep:image", "terminux-escape-parser/use_image", "terminux-escape-parser/kitty-shm", "terminux-cell/use_image", "terminux-surface/use_image"]
image = ["sha2", "terminux-blob-leases", "terminux-escape-parser/image"]
tmux_cc = ["pest", "pest_derive", "terminux-escape-parser/tmux_cc"]
docs = ["widgets", "use_serde", "image", "tmux_cc"]

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
k9.workspace = true

[target."cfg(unix)".dependencies]
signal-hook.workspace = true
termios.workspace = true
nix = {workspace=true, features=["mman", "fs"]}

[target."cfg(windows)".dependencies.winapi]
features = [
    "winbase",
    "winerror",
    "winnls",
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "synchapi",
    "memoryapi",
    "winnt",
    "impl-default"
]
workspace = true

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[[bench]]
name = "cell"
harness = false

